--- a/css/style.css
+++ b/css/style.css
@@ -267,27 +267,49 @@
 
 #section04{
 	width:100%; 
-	padding-bottom: 15px;
+	padding-bottom: 50px;
 }
 #section04 h1 {
-	height: 110px;
+	width: 8%;
 	color: #361818;
 	font-size: 40px;
-	text-align: center;
-	position: relative;
-	top: 40px;
+	text-align: left;
 	font-weight: bold;
 	font-family: 'MapoFlowerIsland';
+	border-bottom: 2px solid #666;
+	padding-bottom: 10px;
+	padding-left: 30px;
+	position: relative;
+	top: 200px;
+	left: 155px;
 }
 
-.warp {
-	width: 60%;
-	margin:0 auto;
-}
 
-.clear {
-	clear:both;
-}
+.swiper-container {
+	width: 75%;
+	height: 500px;
+	margin-right: 40px;
+  }
+
+  .swiper-slide {
+	text-align: center;
+	font-size: 18px;
+	background: #fff;
+
+	/* Center slide text vertically */
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	-webkit-justify-content: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	-webkit-align-items: center;
+	align-items: center;
+  }
 /* section 04 end */
 
 #section05{
@@ -430,10 +452,6 @@
 	#section04 {
 		width: 100%;
 	}
-	.warp {
-		width: 90%;
-	}
-
 }
 
 @media (max-width:1200px) {
@@ -446,6 +464,7 @@
 	.introbox2 {
 		margin-left: -30px;
 	}
+	/* section03 end */
 }
 
 @media (max-width:1175px) {
@@ -474,27 +493,6 @@
 	#section04 {
 		width: 100%;
 	}
-	.warp {
-		width: 90%;
-	}
-}
-
-@media (max-width:1175px) {
-	.img_wrap img {
-		width: 330px;
-		height: 330px;
-	}
-	.box-txt {
-		width: 330px;
-		height: 330px;
-	}
-	.introbox1 {
-		margin-left: -5px;
-	}
-	.introbox2 {
-		margin-left: -5px;
-	}
-	/* section03 end */
 }
 
 @media (max-width:1000px) {
@@ -611,9 +609,6 @@
 
 	#section04 {
 		width: 100%;
-	}
-	.warp {
-		width: 95%;
 	}
 	/* section04 end */
 }
